# qt_cursor_app

./: CMakeLists.txt  QtTwoButtonsApp.pro  README.md  debug_ui.bat  main.cpp  mainwindow.ui  open_designer.bat  styles.qss  test_styles.bat
